# pydamic

./: LICENSE  README.md  __init__.py  pyproject.toml
pydamic/: PYDAMIC.py
pydamic/pydamic.egg-info/: PKG-INFO  SOURCES.txt
