[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydamic"
version = "0.2.5"
description = "Basic data structures library for Python"
readme = "README.md"
authors = [
    {name = "Uriya", email = "uriabarsela1234@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/yourusername/pydamic"

[tool.setuptools.packages.find]
where = ["pydamic"]
